chore: Fixed custom-entity validation and ModelEngine cleanup.